apps/english-learning-fe/src/styles.scss
@use "@english-learning/fe-styles/src/lib/abstract/mixin";
@use "@english-learning/fe-styles/src/lib/abstract/function";
@use "@english-learning/fe-styles/src/lib/abstract/variable";

* {
    @include mixin.set-box-model(0, 0);

    box-sizing: border-box;
}

body {
    @include mixin.set-box-model($padding: 0.5em);

    background-color: function.get-color("primary");
    min-width: variable.$body-min-width;
}

